--- a/public/index.html
+++ b/public/index.html
@@ -69,6 +69,7 @@
         socket.emit('call:accepted', {answer: answerOffer, to: from})
         const mySteam = await navigator.mediaDevices.getUserMedia({
                     video: true,
+                    audio : true
                 });
 
                 for (const track of mySteam.getTracks()) {
@@ -100,6 +101,7 @@
 
         const mySteam = await navigator.mediaDevices.getUserMedia({
             video: true,
+            audio : true
         });
 
         for (const track of mySteam.getTracks()) {
@@ -141,6 +143,7 @@
       const getUserMedia = async()=>{
         const userMedia = await navigator.mediaDevices.getUserMedia({
             video: true,
+            audio : true
         })
         const videoEle = document.getElementById('local-video');
         videoEle.srcObject = userMedia;
